tests/snapshots/startup__a_taken_ops_mcp_port_stops_startup_naming_it.snap
---
source: tests/startup.rs
expression: "diagnostic(&out, &addr)"
---
Error: binding the ops MCP server to [ADDR]

Caused by:
    Address already in use
