tests/snapshots/startup__a_transcript_root_that_cannot_be_created_stops_startup_naming_it.snap
---
source: tests/startup.rs
expression: "err.split(\"\\n\\nCaused by\").next().unwrap_or(&err)"
---
Error: creating the transcript root blocker/transcripts
